# disk_space_2

./: CHANGELOG.md  LICENSE  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/disk_space_2/: DiskSpace_2Plugin.kt
android/src/test/kotlin/com/example/disk_space_2/: DiskSpace_2PluginTest.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/disk_space_2_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/test/: widget_test.dart
ios/: disk_space_2.podspec
ios/Classes/: DiskSpace_2Plugin.swift
lib/: disk_space_2.dart  disk_space_2_method_channel.dart  disk_space_2_platform_interface.dart
linux/: CMakeLists.txt  disk_space_2_plugin.cc
linux/include/disk_space_2/: disk_space_2_plugin.h
test/: disk_space_2_method_channel_test.dart  disk_space_2_test.dart
windows/: CMakeLists.txt  disk_space_2_plugin.cpp  disk_space_2_plugin.h  disk_space_2_plugin_c_api.cpp
windows/include/disk_space_2/: disk_space_2_plugin.h  disk_space_2_plugin_c_api.h
